# Lab_5_OS

./: LICENSE  README.md
OS_LAB_5_/: CMakeLists.txt  CMakePresets.json
OS_LAB_5_/Client/: ClientApp.cpp  ClientApp.h  PipeClient.cpp  PipeClient.h  main.cpp
OS_LAB_5_/Server/: OS_LAB_5.cpp  RecordManager.cpp  RecordManager.h  ServerApp.cpp  ServerApp.h
OS_LAB_5_/common/: Employee.h
OS_LAB_5_/tests/: ClientTests.cpp  ServerTests.cpp  tests.cpp
